<resources>
    <string name="app_name">Train Indicator</string>
    <string name="western_railway">WESTERN RAILWAY</string>
    <string name="central_railway">CENTRAL RAILWAY</string>
    <string name="current_location">Current location</string>
    <string name="nearest_fast_station">Nearest fast station</string>
    <string name="nearest_station">Nearest station</string>
    <string name="you_are_here">You are here</string>
    <string name="nearest_slow_station">Nearest slow station</string>
    <string name="not_found">Not found</string>
    <string name="platform_guide">Platform Guide</string>
    <string name="exit">Exit</string>
    <string name="help">Help</string>
    <string name="app_guide">App guide</string>
    <string name="your_current_location">: Your current location</string>
    <string name="fast_station">Fast station</string>
    <string name="fast_station_">: Fast Station</string>
    <string name="slow_station">Slow Station</string>
    <string name="slow_station_">: Slow Station</string>
    <string name="station_code">: Station Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="harbour_railway">HARBOUR RAILWAY</string>
</resources>